...
            fontSize: size.fontTwenty,
        },
    })

    return (
        <View style={styles.screen}>
            <ScreenTitle title="Enter your email" style={styles.title} />
            <Controller
                control={control}
                rules={getFormFieldRules('Email', true, undefined, undefined, [
                    {
                        test: (v: string) => {
                            return validator.isEmail(v)
...
